--- a/templates/index.html
+++ b/templates/index.html
@@ -13,13 +13,14 @@
 </head>
 <body>
 	<canvas id="canvas"></canvas>
-	<script type='module' src='../static/main.mjs'></script>
-	<script type='module' src='../static/math/Vec.mjs'></script>
-	<script type='module' src='../static/math/Rotation.mjs'></script>
-	<script type='module' src='../static/math/util.mjs'></script>
-	<script type='module' src='../static/parts.mjs'></script>
-	<script type='module' src='../static/parse.mjs'></script>
-	<script type='module' src='../static/obj.mjs'></script>
+	<script type='module' src='../static/js/main.js'></script>
+	<script type='module' src='../static/js/main.js'></script>
+	<script type='module' src='../static/js/math/Vec.js'></script>
+	<script type='module' src='../static/js/math/MRotation.js'></script>
+	<script type='module' src='../static/js/math/util.js'></script>
+	<script type='module' src='../static/js/parts.js'></script>
+	<script type='module' src='../static/js/parse.js'></script>
+	<script type='module' src='../static/js/obj.js'></script>
 	<br>
 	<label for='vertices'>Vertices</label>
 	<input type='checkbox' id='vertices'>
