--- a/templates/index.html
+++ b/templates/index.html
@@ -13,21 +13,23 @@
 </head>
 <body>
 	<canvas id="canvas"></canvas>
-	<script type='module' src='../static/js/main.js'></script>
-	<script type='module' src='../static/js/main.js'></script>
+	<script type='module' src='../static/js/Main.js'></script>
 	<script type='module' src='../static/js/math/Vec.js'></script>
 	<script type='module' src='../static/js/math/MRotation.js'></script>
 	<script type='module' src='../static/js/math/util.js'></script>
-	<script type='module' src='../static/js/parts.js'></script>
-	<script type='module' src='../static/js/parse.js'></script>
+	<script type='module' src='../static/js/Parts.js'></script>
+	<script type='module' src='../static/js/Parse.js'></script>
 	<script type='module' src='../static/js/obj.js'></script>
 	<br>
-	<label for='vertices'>Vertices</label>
+	<label for='vertices'>Vertices:</label>
 	<input type='checkbox' id='vertices'>
-	<label for='edges'>Edges</label>
+	<label for='edges'>Edges:</label>
 	<input type='checkbox' id='edges'>
-	<label for='faces'>Faces</label>
+	<label for='faces'>Faces:</label>
 	<input type='checkbox' id='faces' checked>
+	<br>
+	<label for='snorm'>Surface Normals:</label>
+	<input type='checkbox' id='snorm'>
 	<br>
 	<div id='out'></div>
 </body>
