--- a/templates/index.html
+++ b/templates/index.html
@@ -30,6 +30,8 @@
 	<br>
 	<label for='snorm'>Surface Normals:</label>
 	<input type='checkbox' id='snorm'>
+	<label for='order'>Order:</label>
+	<input type='checkbox' id='order'>
 	<br>
 	<div id='out'></div>
 </body>
